[project]
name = "agentic-security-review"
version = "0.1.0"
description = "Authorized adversarial code review workflows for Codex and Claude Code"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
